refactoring: cleaner llm-service interaction with renderer, extract file-manager, move css into .css files

--- a/src/settings-modal.html
+++ b/src/settings-modal.html
@@ -4,407 +4,7 @@
     <meta charset="UTF-8" />
     <title>Sampler Settings</title>
     <link rel="stylesheet" href="main.css" />
-    <style>
-      body {
-        font-family:
-          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: var(--bg-secondary);
-        color: var(--text-primary);
-        height: 100vh;
-        overflow: hidden;
-      }
-
-      #settings-pane {
-        width: 100%;
-        height: 100vh;
-        background-color: var(--bg-primary);
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-      }
-
-      #settings-pane form {
-        display: flex;
-        flex-direction: column;
-        width: 200px;
-      }
-
-      #settings-tabs {
-        display: flex;
-        background-color: var(--bg-secondary);
-        border-bottom: 1px solid var(--border-primary);
-        padding: 0 var(--spacing-lg);
-        margin: 0;
-        height: 48px;
-        align-items: center;
-        position: relative;
-      }
-
-      .tab-btn {
-        padding: var(--spacing-md) var(--spacing-lg);
-        background: none;
-        border: none;
-        cursor: pointer;
-        font-size: var(--font-size-base);
-        font-weight: var(--font-weight-medium);
-        color: var(--text-secondary);
-        border-bottom: 3px solid transparent;
-        transition: none;
-        border-radius: 0;
-        margin-right: 0;
-        position: relative;
-      }
-
-      .tab-btn:hover {
-        background-color: var(--bg-hover);
-        color: var(--text-primary);
-      }
-
-      .tab-btn.active {
-        color: var(--text-primary);
-        border-bottom-color: var(--button-secondary);
-        background-color: var(--bg-primary);
-        font-weight: var(--font-weight-semibold);
-        box-shadow: 0 1px 0 0 var(--bg-primary);
-      }
-
-      /* Small table-ish layout helpers */
-      .row {
-        display: flex;
-        align-items: center;
-        gap: var(--spacing-sm);
-        margin-bottom: var(--spacing-lg);
-      }
-      .row label {
-        font-weight: var(--font-weight-medium);
-        color: var(--text-primary);
-        min-width: 90px;
-        font-size: var(--font-size-base);
-      }
-      .divider {
-        height: 1px;
-        background-color: var(--border-primary);
-        margin: var(--spacing-xs) 0 var(--spacing-md) 0;
-      }
-      .btn {
-        padding: 6px 12px;
-        border: 1px solid var(--border-secondary);
-        border-radius: 4px;
-        background-color: var(--bg-primary);
-        color: var(--text-primary);
-        font-size: 13px;
-        cursor: pointer;
-        transition: all 0.2s;
-        font-weight: 500;
-      }
-      .btn:hover {
-        background-color: var(--bg-secondary);
-        border-color: var(--border-hover);
-      }
-      .btn.primary {
-        background-color: var(--button-secondary);
-        border-color: var(--button-secondary);
-        color: white;
-      }
-      .btn.primary:hover {
-        background-color: var(--button-secondary-hover);
-        border-color: var(--button-secondary-hover);
-      }
-
-      /* Footer styles for success/error messages - now using CSS variables from main.css */
-      .muted {
-        opacity: 0.7;
-        font-size: 0.9em;
-        color: var(--text-secondary);
-      }
-      /* Table styles now using CSS variables from main.css */
-      .mono {
-        font-family:
-          ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono",
-          monospace;
-      }
-
-      /* Close button styles - now using CSS variables from main.css */
-
-      /* Form field styles - now using CSS variables from main.css */
-
-      /* Tab visibility */
-      .tab-content {
-        display: none;
-        flex: 1;
-        padding: 16px 24px;
-        overflow-y: auto;
-      }
-
-      .visible-tab {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .row {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 12px;
-      }
-
-      .row label {
-        font-weight: 500;
-        color: var(--text-primary);
-        min-width: 90px;
-        font-size: 14px;
-      }
-
-      .footer {
-        height: 40px;
-        background-color: var(--bg-secondary);
-        border-top: 1px solid var(--border-primary);
-        display: flex;
-        align-items: center;
-        padding: 0 20px;
-        font-size: 13px;
-        color: var(--text-secondary);
-      }
-
-      .footer.success {
-        color: var(--success);
-        background-color: var(--success-bg);
-        border-top-color: var(--success-border);
-      }
-
-      .footer.error {
-        color: var(--error);
-        background-color: var(--error-bg);
-        border-top-color: var(--error-border);
-      }
-
-      /* Tab content styling */
-      .tab-content .row {
-        margin-bottom: 16px;
-      }
-
-      .tab-content .row label {
-        font-weight: 500;
-        color: var(--text-primary);
-        min-width: 100px;
-        margin-bottom: 0;
-      }
-
-      .tab-content .row input {
-        padding: 12px;
-        border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        font-size: 14px;
-        transition: all 0.2s ease;
-        min-width: 350px;
-      }
-
-      .tab-content .row input:focus {
-        outline: none;
-        border-color: var(--engineering-orange);
-        box-shadow: 0 0 0 2px rgba(213, 4, 2, 0.2);
-      }
-
-      /* Help icon styling */
-      .help-icon {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        background-color: var(--text-secondary);
-        color: white;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 16px;
-        font-size: 11px;
-        font-weight: bold;
-        cursor: help;
-        margin-left: 6px;
-        flex-shrink: 0;
-        transition: none;
-      }
-
-      .help-icon:hover {
-        background-color: var(--text-primary);
-      }
-
-      #key-name {
-        width: 160px !important;
-        min-width: 160px !important;
-        max-width: 160px !important;
-      }
-
-      .tab-content .row button {
-        margin-left: 8px;
-      }
-
-      /* Form actions */
-      .form-actions {
-        display: flex;
-        gap: 8px;
-        margin-top: 16px;
-        padding-top: 12px;
-        border-top: 1px solid var(--border-primary);
-      }
-
-      .form-actions .btn {
-        min-width: 80px;
-      }
-
-      /* Form field improvements */
-      .form-field {
-        margin-bottom: 16px;
-      }
-
-      .form-field label {
-        display: block;
-        margin-bottom: 6px;
-        font-weight: 500;
-        font-size: 14px;
-        color: var(--night);
-      }
-
-      .form-field input,
-      .form-field select {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        font-size: 14px;
-        transition: all 0.2s ease;
-        box-sizing: border-box;
-      }
-
-      .form-field input:focus,
-      .form-field select:focus {
-        outline: none;
-        border-color: var(--engineering-orange);
-        box-shadow: 0 0 0 2px rgba(213, 4, 2, 0.2);
-      }
-
-      .form-field input::placeholder {
-        color: var(--text-muted);
-      }
-
-      select {
-        padding: 6px 10px;
-        border: 1px solid var(--border-secondary);
-        border-radius: 4px;
-        background-color: var(--bg-primary);
-        font-size: 14px;
-        color: var(--text-primary);
-        cursor: pointer;
-        transition: border-color 0.2s;
-      }
-
-      select:focus {
-        outline: none;
-        border-color: var(--button-secondary);
-        box-shadow: 0 0 0 2px var(--shadow-focus);
-      }
-
-      select:hover {
-        border-color: var(--border-hover);
-      }
-
-      /* API Keys table styling */
-      table.keys {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 8px;
-        font-family: inherit;
-        font-size: 14px;
-      }
-      table.keys th,
-      table.keys td {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-        padding: 12px 8px;
-        text-align: left;
-        font-family: inherit;
-      }
-      table.keys th {
-        font-weight: 600;
-        color: var(--text-primary);
-        background-color: var(--bg-secondary);
-      }
-      table.keys td {
-        color: var(--text-primary);
-      }
-      /* Force wrapping for secret column */
-      table.keys td:nth-child(2) {
-        max-width: 300px;
-        word-wrap: break-word;
-        word-break: break-all;
-        overflow-wrap: break-word;
-      }
-      .mono {
-        font-family: inherit;
-      }
-
-      /* Favorites table styling */
-      #favorites-tab table.keys input,
-      #favorites-tab table.keys select {
-        width: 100%;
-        padding: 8px;
-        border: 1px solid var(--border-secondary);
-        border-radius: 4px;
-        background-color: var(--bg-primary);
-        color: var(--text-primary);
-        font-size: 13px;
-        box-sizing: border-box;
-      }
-
-      #favorites-tab table.keys input:focus,
-      #favorites-tab table.keys select:focus {
-        outline: none;
-        border-color: var(--button-secondary);
-        box-shadow: 0 0 0 2px var(--shadow-focus);
-      }
-
-      #favorites-tab table.keys input::placeholder {
-        color: var(--text-muted);
-      }
-
-      /* Close button positioning for settings modal */
-      #settings-tabs .close-btn {
-        position: absolute;
-        top: 50%;
-        right: var(--spacing-md);
-        transform: translateY(-50%);
-        z-index: 10;
-      }
-
-      /* Welcome message styling */
-      #welcome-message {
-        background: linear-gradient(
-          135deg,
-          var(--gradient-primary) 0%,
-          var(--gradient-secondary) 100%
-        );
-        color: white;
-        padding: 20px;
-        margin: 0;
-        text-align: center;
-      }
-
-      #welcome-message h2 {
-        margin: 0 0 10px 0;
-        font-size: 24px;
-      }
-
-      #welcome-message p {
-        margin: 0 0 15px 0;
-        font-size: 16px;
-        opacity: 0.9;
-      }
-
-      #welcome-message p:last-child {
-        margin: 0;
-        font-size: 14px;
-        opacity: 0.8;
-      }
-    </style>
+    <link rel="stylesheet" href="settings-modal.css" />
   </head>
   <body>
     <div id="settings-pane">
