fixing Google & Anthropic API and also passing through provider errors from openrouter

--- a/src/settings-modal.html
+++ b/src/settings-modal.html
@@ -86,6 +86,8 @@
                 <option value="openai-chat">OpenAI Chat Completions</option>
                 <option value="openrouter">OpenRouter API</option>
                 <option value="together">Together API</option>
+                <option value="anthropic">Anthropic Claude</option>
+                <option value="google">Google Gemini</option>
                 <option value="base">Custom</option>
               </select>
             </div>
