copying valid settings at the of Generate, and updating text when node summaries fail

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
             <div id="node-stats-display" class="node-stats-display">
               <div class="node-info-line">
                 <span title="Node ID" id="node-position">📍 1: </span>
-                <span title="Node summary" id="node-summary">Untitled</span>
+                <span title="Node summary" id="node-summary">Unsaved</span>
               </div>
               <div class="node-info-line metadata-line">
                 <span title="Author"
